--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+        <style>
+            body {
+                color: white;
+                background-color: #000000;
+                font-family: Arial, Helvetica, sans-serif;
+            }
+        </style>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
