--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -7,6 +7,30 @@
                 background-color: #000000;
                 font-family: Arial, Helvetica, sans-serif;
             }
+
+            .book-text {
+                line-height: 2.0;
+                text-indent: 25px;
+            }
+
+            ::-webkit-scrollbar {
+                width: 5px;
+                border-radius: 100px;
+            }
+
+            ::-webkit-scrollbar-track {
+                background: #000;
+            }
+
+            ::-webkit-scrollbar-thumb {
+                height: 5%;
+                background: #fff;
+                border-radius: 100px;
+            }
+
+            ::-webkit-scrollbar-thumb:hover {
+                background: #eee;
+            }
         </style>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
