got epub rendering to a point where Dune looks good!

--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -8,9 +8,19 @@
                 font-family: Arial, Helvetica, sans-serif;
             }
 
-            .book-text {
+            #book-view p {
                 line-height: 2.0;
                 text-indent: 25px;
+                text-align: left;
+            }
+
+            #book-view img {
+                width: 100%;
+                height: auto;
+            }
+
+            #book-view {
+                text-align: center;
             }
 
             ::-webkit-scrollbar {
