--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -1,47 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-        <style>
-            body {
-                color: white;
-                background-color: #000000;
-                font-family: Arial, Helvetica, sans-serif;
-            }
-
-            #book-view p {
-                line-height: 2.0;
-                text-indent: 25px;
-                text-align: left;
-            }
-
-            #book-view img {
-                width: 100%;
-                height: auto;
-            }
-
-            #book-view {
-                text-align: center;
-            }
-
-            ::-webkit-scrollbar {
-                width: 5px;
-                border-radius: 100px;
-            }
-
-            ::-webkit-scrollbar-track {
-                background: #000;
-            }
-
-            ::-webkit-scrollbar-thumb {
-                height: 5%;
-                background: #fff;
-                border-radius: 100px;
-            }
-
-            ::-webkit-scrollbar-thumb:hover {
-                background: #eee;
-            }
-        </style>
+        <link rel="stylesheet" href="%sveltekit.assets%/global.css">
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
